syntax = "proto2";

message Request {
  optional int64 logid = 1;
  repeated TaskClass tasks = 2;
};

message Response {
  optional int32 err_no = 1;
  optional string err_msg = 2;
  repeated string key = 3;
  repeated string value = 4;
};

message TaskClass {
  required string filename = 1;
  required string file_str = 2;
  required string cls_name = 3;
}

service JobManagerService {
  rpc submitJob(Request) returns (Response) {}
};
